[package]
name = "overseerd-axum"
description = "The Overseerd axum/HTTP protocol plugin: controllers, route DI extractors, and the serve loop over the protocol-agnostic overseerd-app core."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
# Compile the generated HTTP client SDK: the body/response envelopes and the codec, protocol
# but transport-agnostic. Pick a backend (`reqwest` / `hyper`) to actually issue requests.
client = [
    "dep:overseerd-client",
    "dep:http",
    "dep:serde_urlencoded",
    "overseerd-axum-macros/client",
]
# Client backends — independent so a user picks one (or both). Each pulls in only its stack.
reqwest = ["client", "dep:reqwest", "overseerd-axum-macros/reqwest"]
# Opt into the new `tsify` `Ts<T>` wasm ABI for the generated browser client (typed, leak-free).
# Requires the unreleased `tsify` (git master) as a wasm dep in the consuming crate. Off by default
# uses the published `tsify` `into_wasm_abi` path, which needs no git dependency.
wasm-ts = ["overseerd-axum-macros/wasm-ts"]
hyper = ["client", "dep:hyper", "dep:hyper-util", "dep:http-body-util"]
tungstenite = ["client", "ws", "dep:tokio-tungstenite"]
di-check = [
    "overseerd-app/di-check",
    "overseerd-di/di-check",
    "overseerd-config/di-check",
    "overseerd-axum-macros/di-check",
]
yaml = ["overseerd-app/yaml", "overseerd-config/yaml"]
watch = ["overseerd-app/watch", "overseerd-config/watch"]
tracing-subscriber = ["overseerd-app/tracing-subscriber"]
# WebSocket streaming (client/bidi). Scaffolded; not served yet.
ws = ["axum/ws"]
# STOMP 1.2 pub/sub over WebSocket: the broker, `#[controller(ws = Stomp)]` message handlers, and
# the typed generated client. Implies `ws`; pulls in the `stomp-parser` frame grammar.
stomp = ["ws", "dep:stomp-parser"]
# Integration flag: pull in `uuid`. A cross-cutting flag (not tied to a protocol) so the facade can
# fan it out to every crate that has a `uuid` integration. On its own it only adds the dependency;
# the actual `TopicParam for Uuid` impl is gated on `all(stomp, uuid)`, so `uuid` without `stomp` is
# a harmless no-op rather than an error.
uuid = ["dep:uuid"]
# Set by the `overseerd` facade: root the macros' generated plugin types at
# `::overseerd::axum::*`. Off (the default) keeps them at this standalone crate
# (`::overseerd_axum::*`), so depending on `overseerd-axum` directly works.
facade = ["overseerd-axum-macros/facade"]

# Shared across all targets: the generated HTTP client runtime and its lightweight support. The
# client is transport-generic and pure, so these must compile for wasm too.
[dependencies]
# Proc-macro crate — built for the host regardless of target.
overseerd-axum-macros = { workspace = true }
overseerd-client = { workspace = true, optional = true }
# Non-optional: the client codecs build on its `Encodes`/`Decodes`/`CodecError`, and it is
# wasm-safe (server IO transports are gated out inside that crate).
overseerd-transport = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
http = { workspace = true, optional = true }
serde_urlencoded = { workspace = true, optional = true }

# Native (non-wasm): the full server stack — axum, the DI/app/config crates, tokio, and the
# streaming/ws/hyper client backends that need a real runtime and sockets.
[target.'cfg(not(target_family = "wasm"))'.dependencies]
overseerd-app = { workspace = true }
overseerd-core = { workspace = true }
overseerd-di = { workspace = true }
overseerd-config = { workspace = true }
overseerd-hooks = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tokio = { workspace = true }
linkme = { workspace = true }
cookie = { workspace = true }
# `stream` (streamed response bodies) and TLS need these reqwest features; both keep openssl/rsa
# out (rustls-tls). Not available on wasm's fetch backend.
reqwest = { workspace = true, optional = true, features = ["rustls-tls", "stream"] }
hyper = { workspace = true, optional = true }
hyper-util = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
stomp-parser = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

# wasm: reqwest's browser `fetch` backend — only the `json` feature from the workspace base (no
# TLS/stream/connection-pool, none of which the fetch backend supports) — plus `serde-wasm-bindgen`,
# re-exported for the generated `#[wasm_bindgen]` client's argument/result marshalling.
[target.'cfg(target_family = "wasm")'.dependencies]
reqwest = { workspace = true, optional = true }
