[package]
name = "overseerd-axum"
description = "The Overseerd axum/HTTP protocol plugin: controllers, route DI extractors, and the serve loop over the protocol-agnostic overseerd-app core."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
# Compile the generated HTTP client SDK: the body/response envelopes and the codec, protocol
# but transport-agnostic. Pick a backend (`reqwest` / `hyper`) to actually issue requests.
client = [
    "dep:overseerd-client",
    "dep:http",
    "dep:serde_urlencoded",
    "overseerd-axum-macros/client",
]
# Client backends — independent so a user picks one (or both). Each pulls in only its stack.
# `dep:wasm-bindgen` (wasm-only, dropped on native) backs the framework `Connection` class; the
# wasm-only `js-sys`/`web-sys`/`wasm-bindgen-futures` trio backs the browser `Multipart` builder's
# `File`/`Blob` upload path (all dropped on native, like the STOMP transport's use of them).
reqwest = [
    "client",
    "dep:reqwest",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "dep:web-sys",
    "overseerd-axum-macros/reqwest",
]
# Opt into the new `tsify` `Ts<T>` wasm ABI for the generated browser client (typed, leak-free).
# Requires the unreleased `tsify` (git master) as a wasm dep in the consuming crate. Off by default
# uses the published `tsify` `into_wasm_abi` path, which needs no git dependency.
wasm-ts = ["overseerd-axum-macros/wasm-ts"]
hyper = ["client", "dep:hyper", "dep:hyper-util", "dep:http-body-util"]
# The client WebSocket transports. `tokio-tungstenite-wasm` powers the cross-target STOMP transport;
# `wasm-bindgen-futures` (wasm-only, dropped on native) gives it `spawn_local`; `tokio-tungstenite`
# (native-only, dropped on wasm) powers the JsonWs request/reply backend.
tungstenite = [
    "client",
    "ws",
    "dep:tokio-tungstenite",
    "dep:tokio-tungstenite-wasm",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "dep:serde-wasm-bindgen",
    "dep:wasm-bindgen",
    "overseerd-axum-macros/tungstenite",
]
di-check = [
    "overseerd-app/di-check",
    "overseerd-di/di-check",
    "overseerd-config/di-check",
    "overseerd-axum-macros/di-check",
]
yaml = ["overseerd-app/yaml", "overseerd-config/yaml"]
watch = ["overseerd-app/watch", "overseerd-config/watch"]
tracing-subscriber = ["overseerd-app/tracing-subscriber"]
# OpenAPI 3.1 spec generation via utoipa. Turns on the `ToSchema` derive on `#[dto]`, the
# `#[utoipa::path]` emission on routes, the operation/schema linkme slices, and the served
# `/openapi.json` route. Off by default; a plain build pulls no utoipa. Native server surface only.
openapi = ["dep:utoipa", "overseerd-axum-macros/openapi"]
# OpenAPI UIs — each pulls only its own utoipa-* crate and is additionally gated at runtime by
# `AxumConfig.openapi.ui`, so compiling one still lets a deployment serve JSON only.
openapi-swagger-ui = ["openapi", "dep:utoipa-swagger-ui"]
openapi-redoc = ["openapi", "dep:utoipa-redoc"]
openapi-rapidoc = ["openapi", "dep:utoipa-rapidoc"]
openapi-scalar = ["openapi", "dep:utoipa-scalar"]
# WebSocket streaming (client/bidi). Scaffolded; not served yet.
ws = ["axum/ws"]
# The `multipart/form-data` request extractor (`axum::extract::Multipart`, re-exported here). Off by
# default, mirroring axum: enable it to receive uploads on the server. The client-side `Multipart`
# body builder is always available (it needs no server machinery) under the `client` feature.
multipart = ["axum/multipart"]
# STOMP 1.2 pub/sub over WebSocket: the broker, `#[controller(ws = Stomp)]` message handlers, and
# the typed generated client. Implies `ws`; pulls in the `stomp-parser` frame grammar.
stomp = ["ws", "dep:stomp-parser"]
# Integration flag: pull in `uuid`. A cross-cutting flag (not tied to a protocol) so the facade can
# fan it out to every crate that has a `uuid` integration. On its own it only adds the dependency;
# the actual `TopicParam for Uuid` impl is gated on `all(ws, uuid)`, so `uuid` without `ws` is
# a harmless no-op rather than an error.
uuid = ["dep:uuid"]
# Set by the `overseerd` facade: root the macros' generated plugin types at
# `::overseerd::axum::*`. Off (the default) keeps them at this standalone crate
# (`::overseerd_axum::*`), so depending on `overseerd-axum` directly works.
facade = ["overseerd-axum-macros/facade"]

# Shared across all targets: the generated HTTP client runtime and its lightweight support. The
# client is transport-generic and pure, so these must compile for wasm too.
[dependencies]
# Proc-macro crate — built for the host regardless of target.
overseerd-axum-macros = { workspace = true }
overseerd-client = { workspace = true, optional = true }
# Non-optional: the client codecs build on its `Encodes`/`Decodes`/`CodecError`, and it is
# wasm-safe (server IO transports are gated out inside that crate).
overseerd-transport = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
http = { workspace = true, optional = true }
serde_urlencoded = { workspace = true, optional = true }
# STOMP frame grammar + the unified native/wasm WebSocket client power the STOMP client transport,
# which compiles on both targets — so they are shared (not in a target table). `uuid` too: the
# wasm-safe `TopicParam for Uuid` impl lives in `crate::stomp`. All wasm-safe.
stomp-parser = { workspace = true, optional = true }
tokio-tungstenite-wasm = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
# Serializes decoded STOMP messages to JS for the wasm subscription callback (wasm-only in practice;
# pulled by `tungstenite`, harmless on native where the wasm bridge is not compiled).
serde-wasm-bindgen = { workspace = true, optional = true }

# Native (non-wasm): the full server stack — axum, the DI/app/config crates, tokio, and the
# streaming/ws/hyper client backends that need a real runtime and sockets.
[target.'cfg(not(target_family = "wasm"))'.dependencies]
overseerd-app = { workspace = true }
overseerd-core = { workspace = true }
overseerd-di = { workspace = true }
overseerd-config = { workspace = true }
overseerd-hooks = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
linkme = { workspace = true }
cookie = { workspace = true }
# `stream` (streamed response bodies) and TLS need these reqwest features; both keep openssl/rsa
# out (rustls-tls). Not available on wasm's fetch backend.
reqwest = { workspace = true, optional = true, features = ["rustls-tls", "stream"] }
hyper = { workspace = true, optional = true }
hyper-util = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
# The JsonWs request/reply backend (native-only for now — it uses a tokio timer for heart-beats).
tokio-tungstenite = { workspace = true, optional = true }
# OpenAPI (native server surface only): the doc model + the served UIs. The `ToSchema` derive that
# `#[dto]` emits is itself gated `not(target_family = "wasm")`, so utoipa never reaches a wasm build.
utoipa = { workspace = true, optional = true }
utoipa-swagger-ui = { workspace = true, optional = true }
utoipa-redoc = { workspace = true, optional = true }
utoipa-rapidoc = { workspace = true, optional = true }
utoipa-scalar = { workspace = true, optional = true }

# wasm: reqwest's browser `fetch` backend (json only) — plus `tokio` (sync + `select!` macro; no
# runtime/net) and `wasm-bindgen-futures` (for `spawn_local`) that the STOMP transport actor needs.
# `wasm-bindgen`/`js-sys` back the framework-provided `Connection` class + the STOMP subscribe
# callback bridge (the crate defines `#[wasm_bindgen]` items, so it depends on them directly —
# a version match with the consuming crate is required, as always with wasm-bindgen).
[target.'cfg(target_family = "wasm")'.dependencies]
reqwest = { workspace = true, optional = true }
tokio = { version = "1", default-features = false, features = ["sync", "macros"] }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
js-sys = { version = "0.3", optional = true }
# `File`/`Blob` bindings for the reqwest wasm client's `Multipart` upload builder.
web-sys = { workspace = true, optional = true, features = ["Blob", "File"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
