[package]
name = "overseer-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["toml"]
toml = ["dep:toml"]
yaml = ["dep:serde_yaml_ng"]

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true, optional = true }
serde_yaml_ng = { workspace = true, optional = true }
