[package]
name = "overseerd-config"
description = "Configuration loading (TOML/YAML) for the overseerd daemon framework."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["toml"]
toml = ["dep:toml"]
yaml = ["dep:serde_yaml_ng"]

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true, optional = true }
serde_yaml_ng = { workspace = true, optional = true }
