[package]
name = "overseerd-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
client = ["overseerd-transport/client"]
di-check = []
# Enable YAML config sources (`application.yaml`) in addition to the default TOML.
yaml = ["overseerd-config/yaml"]
# Provide the `init_tracing` helper, pulling in `tracing-subscriber`.
tracing-subscriber = ["dep:tracing-subscriber"]

[dependencies]
linkme = { workspace = true }
thiserror = { workspace = true }
directories = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
overseerd-config = { workspace = true }
overseerd-transport = { workspace = true }
overseerd-macros = { workspace = true }
