[package]
name = "overseerd-core"
description = "Core runtime for the overseerd daemon framework: dependency injection, services, typed RPC, and lifecycle."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
client = ["overseerd-transport/client"]
di-check = []
# Enable YAML config sources (`application.yaml`) in addition to the default TOML.
yaml = ["overseerd-config/yaml"]
# Provide the `init_tracing` helper, pulling in `tracing-subscriber`.
tracing-subscriber = ["dep:tracing-subscriber"]
# Watch config files and reload on change (opt-in via `ConfigManager::watch_config`),
# pulling in the `notify` filesystem-events crate.
watch = ["dep:notify"]

[dependencies]
arc-swap.workspace = true
linkme = { workspace = true }
thiserror = { workspace = true }
directories = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
notify = { workspace = true, optional = true }
overseerd-config = { workspace = true }
overseerd-transport = { workspace = true }
overseerd-macros = { workspace = true }
