[package]
name = "overseerd-core"
description = "Leaf vocabulary for the Overseerd framework: type descriptors, the dependency-edge model, scopes, and the resolver abstraction. Depends on nothing internal."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
inventory.workspace = true
