[package]
name = "overseerd-daemon"
description = "The Overseerd daemon runtime and RPC adapter: builder, router, extractors, middleware, lifecycle, and serve loop."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
client = ["overseerd-transport/client"]
di-check = [
    "overseerd-di/di-check",
    "overseerd-config/di-check",
    "overseerd-transport/di-check",
]
yaml = ["overseerd-config/yaml"]
watch = ["overseerd-config/watch"]
tracing-subscriber = ["dep:tracing-subscriber"]

[dependencies]
overseerd-core = { workspace = true }
overseerd-di = { workspace = true }
overseerd-hooks = { workspace = true }
overseerd-config = { workspace = true }
overseerd-transport = { workspace = true, features = ["di"] }
overseerd-dirs = { workspace = true }
arc-swap = { workspace = true }
linkme = { workspace = true }
directories = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
thiserror = { workspace = true }
