[package]
name = "overseerd-di"
description = "The Overseerd dependency-injection engine: scope containers, factories, and component descriptors over the core resolver."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
# Emit compile-time DI checks (`Wiring: Provide<Dep>` bounds).
di-check = []

[dependencies]
overseerd-core = { workspace = true }
overseerd-hooks = { workspace = true }
arc-swap = { workspace = true }
linkme = { workspace = true }
inventory = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

# Sets the `overseerd_hybrid` cfg (target-correct here) so the registration read-side can branch on
# the active backend if it ever needs to.
[build-dependencies]
overseerd-build = { workspace = true }
