[package]
name = "overseerd-dirs"
description = "Unified application directories for the Overseerd framework, injectable as Dir<K>. Standalone: depends only on core and di."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
di-check = ["overseerd-di/di-check"]

[dependencies]
overseerd-core = { workspace = true }
overseerd-di = { workspace = true }
directories = { workspace = true }
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
] }
