[package]
name = "overseerd-jobs-macros"
description = "The Overseerd job macros (#[jobs], #[job]), built on overseerd-macros-core. Re-exported through the overseerd facade's jobs module; depend on the facade (with the `jobs` feature), not this crate."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[features]
# Emit the compile-time dependency-injection assertions (forwarded to macros-core, where the
# `#[init]`/field-injection assertions read the feature). A `#[jobs]` block may carry `#[init]`.
di-check = ["overseerd-macros-core/di-check"]
# Root generated plugin types at the `overseerd` facade (`::overseerd::jobs::*`) instead of this
# plugin crate (`::overseerd_jobs::*`). Enabled by the `overseerd` facade; off means the
# standalone `overseerd-jobs` is the root. Core vocabulary is always `::overseerd` either way.
facade = []

[dependencies]
overseerd-macros-core = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
# Parse `#[job]` duration options (`timeout = "30s"`, `jitter = "1s"`) at expansion time, so an
# invalid duration is a compile error. Dependency-free; matches the runtime crate's parser.
humantime = "2"
