[package]
name = "overseerd-macros-core"
description = "Shared codegen library for the Overseerd proc-macros: attribute parsing, component/hook/method models, descriptor-slice emission, client generation, and crate-path resolution. Reused by overseerd-macros and per-plugin macro crates."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
