[package]
name = "overseerd-macros-core"
description = "Shared codegen library for the Overseerd proc-macros: attribute parsing, component/hook/method models, descriptor-slice emission, client generation, and crate-path resolution. Reused by overseerd-macros and per-plugin macro crates."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
# Emit the generated client (the `cfg!(feature = "client")` gate in client codegen).
# Forwarded from the macro crates' `client` feature.
client = []
# Emit the compile-time dependency-injection assertions (read by `di::enabled()` and the
# field-injection codegen). Forwarded from the macro crates' `di-check` feature.
di-check = []

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
