[package]
name = "overseerd-macros"
description = "Procedural macros for the overseerd daemon framework (components, services, config, and RPC handlers)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[features]
client = ["overseerd-macros-core/client"]
# Emit compile-time dependency-injection checks: `impl Provide<Self> for Wiring`
# per component, plus a `Wiring: Provide<Dep>` bound per concrete dependency.
di-check = ["overseerd-macros-core/di-check"]

[dependencies]
overseerd-macros-core = { workspace = true }
proc-macro2 = { workspace = true }
