[package]
name = "overseerd-rpc-macros"
description = "The Overseerd RPC daemon macros (#[service], #[handlers], #[rpc], app!), built on overseerd-macros-core. Re-exported through the overseerd facade's daemon module; depend on the facade, not this crate."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[features]
# Emit the generated RPC client (the `cfg!(feature = "client")` gates in #[service]/#[handlers]).
client = ["overseerd-macros-core/client"]
# Emit the compile-time dependency-injection assertions (forwarded to macros-core, where the
# `di::enabled()` / field-injection assertions read the feature).
di-check = ["overseerd-macros-core/di-check"]
# Force the `inventory` registration backend at codegen time. Forwarded to the shared codegen crate.
hybrid-registry = ["overseerd-macros-core/hybrid-registry"]
# Root generated plugin types at the `overseerd` facade (`::overseerd::daemon::*`) instead of
# this protocol crate (`::overseerd_rpc::*`). Enabled by the `overseerd` facade; off means the
# standalone `overseerd-rpc` is the root. Core vocabulary is always `::overseerd` either way.
facade = []

[dependencies]
overseerd-macros-core = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
