[package]
name = "overseerd-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
client = []

[dependencies]
bitflags = { workspace = true }
thiserror = "2"
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
tracing = { workspace = true }
