[package]
name = "overseerd-transport"
description = "Wire transport and status-code types for the overseerd daemon framework."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
client = []

[dependencies]
bitflags = { workspace = true }
thiserror = "2"
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
tracing = { workspace = true }
