[package]
name = "overseerd-transport"
description = "Wire transport and status-code types for the overseerd daemon framework."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
# Make `PeerInfo` an Overseerd DI injectable (so a connection-scoped component can depend
# on it). Pulls in `overseerd-di`; off by default so the transport stays standalone.
di = ["dep:overseerd-di"]
# Additionally emit the compile-time `Provide<PeerInfo>` impl for di-check.
di-check = ["di", "overseerd-di/di-check"]

[dependencies]
bitflags = { workspace = true }
thiserror = "2"
futures = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
tracing = { workspace = true }
overseerd-di = { workspace = true, optional = true }

# Native: the full runtime for the socket transports and length-prefixed IO codec.
[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }

# wasm: no runtime/net — only `tokio::sync` (used by `frame`) and `tokio_util`'s
# `CancellationToken`. The socket transports and IO codec are compiled out (see `lib.rs`).
[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { version = "1", default-features = false, features = ["sync"] }
tokio-util = { version = "0.7", default-features = false }
