[package]
name = "overseer-example-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
overseer = { path = "../.." }
tokio = { workspace = true }
serde = { workspace = true }

# Build-time dependency-graph validation: the build script fails `cargo build`
# if the DI graph is unsatisfiable, so CI catches it before deployment.
[build-dependencies]
overseer-analyze = { path = "../../crates/analyze" }
