[package]
name = "overseerd-example-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
overseerd = { path = "../..", features = ["tracing-subscriber"] }
tokio = { workspace = true }
serde = { workspace = true }
tracing.workspace = true

# Build-time dependency-graph validation: the build script fails `cargo build`
# if the DI graph is unsatisfiable, so CI catches it before deployment.
[build-dependencies]
overseerd-analyze = { path = "../../crates/analyze" }
